# binary-parser-with-xml

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json  やりたいこと.txt
docs/: IMPLEMENTATION_STATUS.md  LIMITATIONS.md  limitations.md
src/binary_parser/: binary_parser.cpp  binary_parser.h  json_converter.cpp  json_converter.h  main.cpp  xml_struct_parser.cpp  xml_struct_parser.h
src/header_to_xml/: __init__.py  header_to_xml.py  main.py  test_output.xml
src/json/: json_value.cpp  json_value.h
tests/: test_all_requirements.py  test_binary_parser.cpp  test_boundary_conditions.py  test_char_type.cpp  test_edge_cases.py  test_error_handling.py  test_header_to_xml.py  test_header_to_xml_output.py  test_macro_expansion.py  test_main_program.py  test_project_structure.py  test_simple_requirements.py  test_struct.h
tests/extreme_complex/: base_types.h  extreme_nested.h  game_types.h  network_types.h  physics_types.h  test_binary_parse.py  test_data_validation.py  test_extreme_complex.py  test_ultra_extreme.py  ultra_extreme.h
tests/integration/: bitfield_test.h  bitfield_test.xml  complex_test.h  complex_test.xml  complex_test_data.h  complex_test_data.xml  create_complex_test_binary  create_complex_test_binary.cpp  create_test_binary  create_test_binary.cpp  debug_test.h  run_complex_integration_test.sh  run_integration_test.sh  run_integration_test_with_json.sh  test_bitfield  test_bitfield.cpp  test_complex.cpp  test_data.h  test_data.xml  test_data_packed.xml  test_full_workflow.py  test_macro_integration.py
tests/integration/extreme/: CMakeLists.txt  Makefile  extreme_base_types.h  extreme_middle_types.h  extreme_test.h  extreme_test.xml  extreme_test_v2.xml  extreme_test_v3.xml  extreme_test_v4.xml  simple_extreme_test.xml  test_extreme_parser  test_extreme_parser.cpp
tests/test_includes/: main_struct.h  types.h
tests/unit/: test_binary_parser.cpp  test_binary_parser_endianness.cpp  test_binary_parser_logic.cpp  test_char_type.cpp  test_json_converter.cpp  test_json_converter_edge_cases.cpp  test_json_error_handling.cpp  test_signed_types.cpp
tests/unit/json/: test_json_value.cpp
